Замена href картинки

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 	<div style="margin: 30px auto 0 auto;">
-		<img src="https://downloader.disk.yandex.ru/preview/3087991650e8a4ebc88f342a1d2cd831c9f64ec64a1d5e05a049e4d7d11e13ba/621946d8/YGikPYAFn24MeZRwQ-HXgxM7AN8rLveok5Dyi5JTTY9sPJKrbNKdKWq7qg9hmV_WHQ1OOKwxX-ezwNOouFuEmA%3D%3D?uid=0&filename=2022-02-23%2020-30-43.JPEG&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&owner_uid=0&tknv=v2&size=2048x2048" alt="pic">
+		<img src="https://disk.yandex.ru/i/AozvkK0v2gLV6Q" alt="pic">
 		
 	</div>
 	
