--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 	<div style="margin: 30px auto 0 auto;">
-		<img src="https://disk.yandex.ru/i/AozvkK0v2gLV6Q" alt="pic">
+		<img src="https://3.downloader.disk.yandex.ru/preview/fbd8cfa6ff8df7f5a6fc3ba8492a5b9778eee458db28848afdfa0f6ccee6108e/inf/YGikPYAFn24MeZRwQ-HXgxM7AN8rLveok5Dyi5JTTY9sPJKrbNKdKWq7qg9hmV_WHQ1OOKwxX-ezwNOouFuEmA%3D%3D?uid=35086106&filename=2022-02-23%2020-30-43.JPEG&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&owner_uid=35086106&tknv=v2&size=1919x940" alt="pic">
 		
 	</div>
 	
