--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-	<div style="margin: 30px auto 0 auto;">
-		<img src="https://avatars.mds.yandex.net/get-pdb/5869806/b7226bb9-f633-4178-977a-9691ef840c39/s1200" alt="pic">
+	<div style="margin: 30px auto 0 auto; width: 400px;">
+		<img src="https://avatars.mds.yandex.net/get-pdb/5869806/b7226bb9-f633-4178-977a-9691ef840c39/s1200" alt="pic" style="width: 100%; height: auto;">
 		
 	</div>
 	
