Добавлены html файлы заказчика

--- a/xxxletter/letter-china-gargo01.html
+++ b/xxxletter/letter-china-gargo01.html
@@ -47,6 +47,41 @@
 					</td>
 				</tr>
 				<tr>
+					<td style="background-color: #F9F9F9; padding-left: 30px; padding-right: 30px; padding-top: 46px; padding-bottom: 38px;">
+						<p style="text-align: center; Margin: 0; line-height: 29px; font-weight: bold; font-size: 18px; color: #333333;">Работаем с Китаем более 10 лет</p>
+						<p style="Margin: 0; line-height: 29px; padding-top: 43px; font-weight: bold; color: #64676A;">1. Доставка грузов из Китая в Россию и Беларусь</p>
+						<p style="Margin: 0; line-height: 25px; padding-top: 15px; color: #64676A;">Белая схема работы через Дальний Восток и Карго доставка через Казахстан и Киргизию. Способы доставки: авто, жд, авиа. Склады в Иу, Гуанчжоу, Шэньчжэнь.
+</p>
+						<p style="Margin: 0; line-height: 29px; padding-top: 35px; font-weight: bold; color: #64676A;">2. Выкуп товаров в Китае на 1688.com, taobao.com и tmall.com
+</p>
+						<p style="Margin: 0; line-height: 25px; padding-top: 15px; color: #64676A;">Консолидация товаров от разных поставщиков на нашем складе в Китае, фотоотчёт. Решение вопросов с поставщиками. Наша комиссия 5-10% от суммы заказа. </p>
+						<p style="Margin: 0; line-height: 29px; padding-top: 35px; font-weight: bold; color: #64676A;">3. Перевод финансов в Китай на счёт компании, карту физ.лица, WeChat, Alipay 
+</p>
+						
+						<p style="Margin: 0; line-height: 25px; padding-top: 15px; color: #64676A;">Срок перевода до 5 рабочих дней. Полный пакет закрывающих документов на товар 
+                 с номером ГТД. Документы подходит для работы с маркетплейсами.</p>
+						<p style="Margin: 0; line-height: 25px; padding-top: 60px; text-align: center;"><a href="https://wa.me/74953745187" target="_blank" style="color: #333333; font-weight: bold; text-decoration: none;">УЗНАТЬ ПОДРОБНЕЕ</a></p>
+					</td>
+				</tr>
+				<tr>
+					<td style="padding-left: 30px; padding-right: 30px; padding-top: 50px; padding-bottom: 56px;">
+						<p style="font-size: 18px; font-weight: bold; line-height: 29px; color: #333333; Margin: 0;">О маршруте через Дальний Восток</p>
+						<ul style="color: #64676A; Margin: 0; padding-left: 20px; line-height: 36px; padding-top: 32px;">
+							<li>От склада г. Иу до границы Суйфэньхэ – затаможка груза (1-2 дня)</li>
+							<li>Далее до СВХ под Уссурийском – растаможка (1-2 дня)</li>
+							<li>Далее груз едет до склада в Хабаровске – (1 день)</li>
+							<li>В Хабаровске ставим на ЖД или АВИА:</li>
+							<li>ЖД в пути 9-12 дней</li>
+							<li>АВИА 1-2 дня</li>
+						</ul>
+						<p style="color: #64676A; font-weight: bold; line-height: 29px; Margin: 0; padding-top: 34px;">Сроки указаны ещё с запасом. Декларируем груз самостоятельно. Документы на товар с номером ГТД от импортёра. Нет задержек по срокам доставки. </p>
+						<p style="color: #333333; font-weight: bold; line-height: 29px; Margin: 0; padding-top: 15px;">Сейчас самое время начать отправлять грузы <br>«В белую под наш контракт»</p>
+						<p style="text-align: center; Margin: 0; padding-top: 42px;"><a href="https://wa.me/74953745187" target="_blank"><img src="https://onlyketch.github.io/pictures/xxxletter/bnt_2.png" alt="Узнать тарифы"></a></p>
+						<p style="text-align: center; color: #64676A; line-height: 29px; Margin: 0; padding-top: 24px; font-weight: bold;">Позвоните нам по номеру 
+						<a href="tel:+74953745187" target="_blank" style="font-weight: bold; text-decoration: underline; color:#64676A;">8 495 374 51 87</a></p>
+					</td>
+				</tr>
+				<tr>
 					<td style="padding-left: 30px; padding-right: 30px; padding-top: 39px; padding-bottom: 56px; background-color: #F9F9F9;">
 						<table align="center" cellspacing="0" cellpadding="0" border="0" style="width:100%; max-width:160px;">
 							<tr>
