Корректировка макета, изменение цвета кнопок

--- a/xxxletter/letter-china-gargo01.html
+++ b/xxxletter/letter-china-gargo01.html
@@ -38,7 +38,7 @@
 				</tr>
 
 				<tr>
-					<td style="background-color: #F9F9F9; padding-left: 30px; padding-right: 30px; padding-top: 46px; padding-bottom: 38px;">
+					<td style="background-color: #FFFFFF; padding-left: 30px; padding-right: 30px; padding-top: 43px;">
 						<p style="text-align: center; Margin: 0; line-height: 29px; font-weight: bold; font-size: 18px; color: #333333;">МЫ РАБОТАЕМ В ОБЫЧНОМ РЕЖИМЕ!</p>
 						
 						<p style="Margin: 0; line-height: 25px; padding-top: 15px; color: #64676A;">Для расчёта стоимости пришлите информацию: какой груз, фото, описание, вес, объём в м3 или габариты коробок, стоимость груза, маршрут, желаемые сроки, нужны документы на товар или нет.
@@ -46,6 +46,14 @@
 						
 					</td>
 				</tr>
+				<tr>
+					<td style="padding-top: 44px; text-align: center;">
+						<a href="https://wa.me/74953745187" target="_blank"><img src="https://onlyketch.github.io/pictures/xxxletter/btn_1.png" alt="Задать вопрос"></a>
+					</td>
+				</tr>
+				<tr>
+					<td style="height: 31px;"></td>
+				</tr>				
 				<tr>
 					<td style="background-color: #F9F9F9; padding-left: 30px; padding-right: 30px; padding-top: 46px; padding-bottom: 38px;">
 						<p style="text-align: center; Margin: 0; line-height: 29px; font-weight: bold; font-size: 18px; color: #333333;">Работаем с Китаем более 10 лет</p>
