--- a/xxxletter/xxxletter3.html
+++ b/xxxletter/xxxletter3.html
@@ -32,7 +32,7 @@
 				</tr>
 				<tr>
 					<td style="padding-top: 44px; text-align: center;">
-						<a href="https://wa.me/74953745187" target="_blank"><img src="http://j96476av.beget.tech/xxxletter/btn_1.png" alt="Задать вопрос"></a>
+						<a href="https://wa.me/74953745187" target="_blank"><img src="https://onlyketch.github.io/pictures/xxxletter/btn_1.png" alt="Задать вопрос"></a>
 					</td>
 				</tr>
 				<tr>
