--- a/xxxletter/letter-china-gargo01.html
+++ b/xxxletter/letter-china-gargo01.html
@@ -10,7 +10,7 @@
 
 			<td>
 
-				<div style="display: none; max-height: 0px; overflow: hidden;">Мы работаем в обычном режиме!</div>
+				<div style="display: none; max-height: 0px; overflow: hidden;">Оплата товара поставщику в Китае</div>
 
 				<div style="display: none; max-height: 0px; overflow: hidden;">&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;</div>
 
@@ -41,7 +41,7 @@
 					<td style="background-color: #FFFFFF; padding-left: 30px; padding-right: 30px; padding-top: 43px;">
 						<p style="text-align: center; Margin: 0; line-height: 29px; font-weight: bold; font-size: 18px; color: #333333;">МЫ РАБОТАЕМ В ОБЫЧНОМ РЕЖИМЕ!</p>
 						
-						<p style="Margin: 0; line-height: 25px; padding-top: 15px; color: #64676A;">Для расчёта стоимости пришлите информацию: какой груз, фото, описание, вес, объём в м3 или габариты коробок, стоимость груза, маршрут, желаемые сроки, нужны документы на товар или нет.
+						<p style="Margin: 0; line-height: 25px; padding-top: 15px; color: #64676A;">Для расчёта стоимости пришлите информацию: какую сумму в юанях нужно перевести поставщику и как планируете оплачивать в России.
 						</p>
 						<p style="text-align: center; padding-top: 20px;"><a href="https://wa.me/74953745187" target="_blank"><img src="https://onlyketch.github.io/pictures/xxxletter/btn_quest.png" alt="Задать вопрос"></a></p>
 					</td>
@@ -51,7 +51,7 @@
 				</tr>				
 				<tr>
 					<td style="background-color: #F9F9F9; padding-left: 30px; padding-right: 30px; padding-top: 46px; padding-bottom: 38px;">
-						<p style="text-align: center; Margin: 0; line-height: 29px; font-weight: bold; font-size: 18px; color: #333333;">Работаем с Китаем более 10 лет</p>
+						<p style="text-align: center; Margin: 0; line-height: 29px; font-weight: bold; font-size: 18px; color: #333333;">Работаем с Китаем более 11 лет</p>
 						<p style="Margin: 0; line-height: 29px; padding-top: 43px; font-weight: bold; color: #64676A;">1. Доставка грузов из Китая в Россию и Беларусь</p>
 						<p style="Margin: 0; line-height: 25px; padding-top: 15px; color: #64676A;">Белая схема работы через Дальний Восток и Карго доставка через Казахстан и Киргизию. Способы доставки: авто, жд, авиа. Склады в Иу, Гуанчжоу, Шэньчжэнь.
 </p>
@@ -77,8 +77,6 @@
 							<li>ЖД в пути 9-12 дней</li>
 							<li>АВИА 1-2 дня</li>
 						</ul>
-						<p style="color: #64676A; font-weight: bold; line-height: 29px; Margin: 0; padding-top: 34px;">Сроки указаны ещё с запасом. Декларируем груз самостоятельно. Документы на товар с номером ГТД от импортёра. Нет задержек по срокам доставки. </p>
-						<p style="color: #333333; font-weight: bold; line-height: 29px; Margin: 0; padding-top: 15px;">Сейчас самое время начать отправлять грузы <br>«В белую под наш контракт»</p>
 						<p style="text-align: center; Margin: 0; padding-top: 42px;"><a href="https://wa.me/74953745187" target="_blank"><img src="https://onlyketch.github.io/pictures/xxxletter/btn_tarif.png" alt="Узнать тарифы"></a></p>
 						<p style="text-align: center; color: #64676A; line-height: 29px; Margin: 0; padding-top: 24px; font-weight: bold;">Позвоните нам по номеру 
 						<a href="tel:+74953745187" target="_blank" style="font-weight: bold; text-decoration: underline; color:#64676A;">8 495 374 51 87</a></p>
