Добавлена верстка письма для Линия Света

--- a/xxxletter/xxxletter3.html
+++ b/xxxletter/xxxletter3.html
@@ -6,7 +6,7 @@
 График работы в новогодние праздники
 </div>
 <!--<![endif]-->
-<table width="100%" cellspacing="0" cellpadding="0" border="0" style="font-family: 'Open Sans', sans-serif;">
+<table width="100%" cellspacing="0" cellpadding="0" border="0" style="font-family: 'Open Sans', sans-serif; background-color: #CCCCCC;">
 	<tr>
 		<td align="center" style="padding-top: 30px; padding-bottom: 44px;">
 			<!--[if (gte mso 9)|(IE)]>
