--- a/linelight/line_mail.html
+++ b/linelight/line_mail.html
@@ -1,7 +1,16 @@
 <!--[if !mso]><!-->
-<div style="font-size:0px;color:transparent;opacity:0;">
-Светильники под ваш проект
-</div>
+<table>
+	<tbody>
+		<tr>
+			<td>
+				<div style="display: none; max-height: 0px; overflow: hidden;">Светильники под ваш проект</div>
+
+				<div style="display: none; max-height: 0px; overflow: hidden;">&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;</div>
+
+			</td>
+		</tr>
+	</tbody>
+</table>
 <!--<![endif]-->
 <table width="100%" cellspacing="0" cellpadding="0" border="0" style="font-family: Helvetica, Arial, sans-serif; background-color: #F0F1F3">
 	<tr>
@@ -12,7 +21,7 @@
 				<tr>
 					<td style="text-align: center;">
 						<a href="https://aceled.ru/" target="_blank">
-							<img src="img/main.png" alt="Производство светильников по индивидуальным размерам" style="display: block;">
+							<img src="https://onlyketch.github.io/pictures/linelight/main.png" alt="Производство светильников по индивидуальным размерам" style="display: block;">
 						</a>
 					</td>
 				</tr>
@@ -26,7 +35,7 @@
 								<td width="285" style="max-width: 285px; background-color: #FFFFFF; border-radius: 18px;">
 									<center>
 										<a href="https://aceled.ru/tproduct/463896866-530447173551-svetilnik-kvadro" target="_blank">
-											<img src="img/kvadro.png" alt="" style="display: block;">
+											<img src="https://onlyketch.github.io/pictures/linelight/kvadro.png" alt="" style="display: block;">
 										</a>
 									</center>
 									<p style="font-size: 16px; font-weight: bold; line-height: 19px; color: #2C2B2B; padding-left: 27px; Margin: 0;">Светильник KVADRO</p>
@@ -36,7 +45,7 @@
 								<td width="285" style="width: 285px; background-color: #FFFFFF; border-radius: 18px;">
 									<center>
 										<a href="https://aceled.ru/tproduct/463896866-330114466021-svetilnik-ring-o" target="_blank">
-											<img src="img/ring.png" alt="" style="display: block;">
+											<img src="https://onlyketch.github.io/pictures/linelight/ring.png" alt="" style="display: block;">
 										</a>
 									</center>
 									<p style="font-size: 16px; font-weight: bold; line-height: 19px; color: #2C2B2B; padding-left: 27px; Margin: 0;">Светильник RING O</p>
@@ -57,7 +66,7 @@
 								<td width="285" style="max-width: 285px; background-color: #FFFFFF; border-radius: 18px;">
 									<center>
 										<a href="https://aceled.ru/tproduct/463896866-183213412391-svetilnik-line-3535" target="_blank">
-											<img src="img/line.png" alt="" style="display: block;">
+											<img src="https://onlyketch.github.io/pictures/linelight/line.png" alt="" style="display: block;">
 										</a>
 									</center>
 									<p style="font-size: 16px; font-weight: bold; line-height: 19px; color: #2C2B2B; padding-left: 27px; Margin: 0;">Светильник Line 3535</p>
@@ -67,7 +76,7 @@
 								<td width="285" style="width: 285px; background-color: #FFFFFF; border-radius: 18px;">
 									<center>
 										<a href="https://aceled.ru/tproduct/463896866-547149141441-svetilnik-stella" target="_blank">
-											<img src="img/stella.png" alt="" style="display: block;">
+											<img src="https://onlyketch.github.io/pictures/linelight/stella.png" alt="" style="display: block;">
 										</a>
 									</center>
 									<p style="font-size: 16px; font-weight: bold; line-height: 19px; color: #2C2B2B; padding-left: 27px; Margin: 0;">Светильник Stella</p>
@@ -87,20 +96,20 @@
 							<tr>
 								<td>
 									<center>
-										<img src="img/1.png" alt="">
+										<img src="https://onlyketch.github.io/pictures/linelight/1.png" alt="">
 										<p style="width: 121px; font-size: 12px; line-height: 14px; color: #2C2B2B;">Индвидуальные формы и размеры</p>
 
 									</center>
 								</td>
 								<td>
 									<center>
-										<img src="img/2.png" alt="">
+										<img src="https://onlyketch.github.io/pictures/linelight/2.png" alt="">
 										<p style="width: 168px; font-size: 12px; line-height: 14px; color: #2C2B2B;">Накладной и подвестной монтаж, регулировка высоты</p>
 									</center>
 								</td>
 								<td>
 									<center>
-										<img src="img/3.png" alt="">
+										<img src="https://onlyketch.github.io/pictures/linelight/3.png" alt="">
 										<p style="width: 121px; font-size: 12px; line-height: 14px; color: #2C2B2B;">Окраска светльника в любой цвет по RAL</p>
 									</center>
 								</td>
@@ -111,20 +120,20 @@
 							<tr>
 								<td>
 									<center>
-										<img src="img/4.png" alt="">
+										<img src="https://onlyketch.github.io/pictures/linelight/4.png" alt="">
 										<p style="width: 121px; font-size: 12px; line-height: 14px; color: #2C2B2B;">Возможность изготовления IP 54</p>
 
 									</center>
 								</td>
 								<td>
 									<center>
-										<img src="img/5.png" alt="">
+										<img src="https://onlyketch.github.io/pictures/linelight/5.png" alt="">
 										<p style="width: 168px; font-size: 12px; line-height: 14px; color: #2C2B2B;">Управление светильниками (Диммирование 0-10V, DALI)</p>
 									</center>
 								</td>
 								<td>
 									<center>
-										<img src="img/6.png" alt="">
+										<img src="https://onlyketch.github.io/pictures/linelight/6.png" alt="">
 										<p style="width: 121px; font-size: 12px; line-height: 14px; color: #2C2B2B;">Светильник с аварийными блоками питания</p>
 									</center>
 								</td>
@@ -149,7 +158,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="img/check.png" alt="">
+												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; font-weight: normal; color: #2C2B2B; Margin: 0;">
 											3D модели для проектов</p></td>
@@ -159,7 +168,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="img/check.png" alt="">
+												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Светотехнический расчет</p></td>
 										</tr>
@@ -168,7 +177,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="img/check.png" alt="">
+												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Индивидуальные условия</p></td>
 										</tr>
@@ -177,7 +186,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="img/check.png" alt="">
+												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Техническая поддержка</p></td>
 										</tr>
@@ -185,7 +194,7 @@
 								</td>
 								<td>
 									<center>
-										<img src="img/arch.png" alt="">
+										<img src="https://onlyketch.github.io/pictures/linelight/arch.png" alt="">
 									</center>
 								</td>
 							</tr>
@@ -209,7 +218,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="img/check.png" alt="">
+												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; font-weight: normal; color: #2C2B2B; Margin: 0;">
 											Подбор оборудования</p></td>
@@ -219,7 +228,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="img/check.png" alt="">
+												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Бонусная программа</p></td>
 										</tr>
@@ -228,7 +237,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="img/check.png" alt="">
+												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Гарантийное обслуживание</p></td>
 										</tr>
@@ -237,7 +246,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="img/check.png" alt="">
+												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Персональные скидки</p></td>
 										</tr>
@@ -245,7 +254,7 @@
 								</td>
 								<td>
 									<center>
-										<img src="img/client.png" alt="">
+										<img src="https://onlyketch.github.io/pictures/linelight/client.png" alt="">
 									</center>
 								</td>
 							</tr>
@@ -269,7 +278,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="img/check.png" alt="">
+												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; font-weight: normal; color: #2C2B2B; Margin: 0;">
 											Индивидуальный менеджер</p></td>
@@ -279,7 +288,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="img/check.png" alt="">
+												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Индивидуальные условия</p></td>
 										</tr>
@@ -288,7 +297,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="img/check.png" alt="">
+												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Помощь с проектом</p></td>
 										</tr>
@@ -297,7 +306,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="img/check.png" alt="">
+												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Защита проекта и не только</p></td>
 										</tr>
@@ -305,7 +314,7 @@
 								</td>
 								<td>
 									<center>
-										<img src="img/diler.png" alt="">
+										<img src="https://onlyketch.github.io/pictures/linelight/diler.png" alt="">
 									</center>
 								</td>
 							</tr>
@@ -331,8 +340,8 @@
 								<td align="right">
 									<table align="right" width="70" cellspacing="0" cellpadding="0" border="0" style="width: 70px;">
 										<tr>
-											<td><a href="https://www.instagram.com/aceled.ru/" target="_blank"><img src="img/inst.png" alt=""></a></td>
-											<td style="padding-left: 3px;"><a href="https://wa.me/+79035056777" target="_blank"><img src="img/whats.png" alt=""></a></td>
+											<td><a href="https://www.instagram.com/aceled.ru/" target="_blank"><img src="https://onlyketch.github.io/pictures/linelight/inst.png" alt=""></a></td>
+											<td style="padding-left: 3px;"><a href="https://wa.me/+79035056777" target="_blank"><img src="https://onlyketch.github.io/pictures/linelight/whats.png" alt=""></a></td>
 										</tr>
 									</table>
 								</td>
