--- a/linelight/line_mail.html
+++ b/linelight/line_mail.html
@@ -1,5 +1,8 @@
+<style>
+	body {margin: 0; padding: 0; background-color: #F0F1F3;}
+</style>
 <!--[if !mso]><!-->
-<table>
+<table style="display: none;">
 	<tbody>
 		<tr>
 			<td>
@@ -12,12 +15,12 @@
 	</tbody>
 </table>
 <!--<![endif]-->
-<table width="100%" cellspacing="0" cellpadding="0" border="0" style="font-family: Helvetica, Arial, sans-serif; background-color: #F0F1F3">
+<table width="100%" cellspacing="0" cellpadding="0" border="0" style="font-family: Helvetica, Arial, sans-serif; background-color: #F0F1F3; Margin: 0;">
 	<tr>
 		<td align="center" style="padding-top: 40px; padding-bottom: 100px;">
 			
 			<!-- Основной контейнер письма -->
-			<table align="center" cellspacing="0" cellpadding="0" border="0" style="width:100%; max-width:600px;">
+			<table align="center" cellspacing="0" cellpadding="0" border="0" style="width:100%; max-width:600px; padding-left: 25px; padding-right: 25px;">
 				<tr>
 					<td style="text-align: center;">
 						<a href="https://aceled.ru/" target="_blank">
@@ -148,8 +151,8 @@
 					<td style="background-color: #FFFFFF; padding-top: 35px; padding-bottom: 46px; border-radius: 18px;">
 						<table align="center" cellspacing="0" cellpadding="0" border="0" style="width: 100%; max-width:600px;">
 							<tr>
-								<td valign="top">
-									<table align="center" width="226" cellspacing="0" cellpadding="0" border="0" style="width: 226px;">
+								<td valign="top" style="padding-left: 30px;">
+									<table width="226" cellspacing="0" cellpadding="0" border="0" style="width: 226px;">
 										<tr>
 											<td colspan="2" style="font-size: 20px; line-height: 24px; font-weight: bold; color: #2C2B2B; Margin: 0;">Архитекторам</td>
 										</tr>
@@ -208,8 +211,8 @@
 					<td style="background-color: #D9DC58; padding-top: 35px; padding-bottom: 46px; border-radius: 18px;">
 						<table align="center" cellspacing="0" cellpadding="0" border="0" style="width: 100%; max-width:600px;">
 							<tr>
-								<td valign="top">
-									<table align="center" width="240" cellspacing="0" cellpadding="0" border="0" style="width: 240px;">
+								<td valign="top" style="padding-left: 30px;">
+									<table width="240" cellspacing="0" cellpadding="0" border="0" style="width: 240px;">
 										<tr>
 											<td colspan="2" style="font-size: 20px; line-height: 24px; font-weight: bold; color: #2C2B2B; Margin: 0;">Заказчикам</td>
 										</tr>
@@ -268,8 +271,8 @@
 					<td style="background-color: #FFFFFF; padding-top: 35px; padding-bottom: 46px; border-radius: 18px;">
 						<table align="center" cellspacing="0" cellpadding="0" border="0" style="width: 100%; max-width:600px;">
 							<tr>
-								<td valign="top">
-									<table align="center" width="260" cellspacing="0" cellpadding="0" border="0" style="width: 260px;">
+								<td valign="top" style="padding-left: 30px;">
+									<table width="260" cellspacing="0" cellpadding="0" border="0" style="width: 260px;">
 										<tr>
 											<td colspan="2" style="font-size: 20px; line-height: 24px; font-weight: bold; color: #2C2B2B; Margin: 0;">Дилерам</td>
 										</tr>
