--- a/linelight/line_mail.html
+++ b/linelight/line_mail.html
@@ -1,5 +1,5 @@
 <style>
-	body {margin: 0; padding: 0; background-color: #F0F1F3;}
+	body {margin: 0; padding: 0; background-color: #EDECEC;}
 </style>
 <!--[if !mso]><!-->
 <table style="display: none;">
@@ -15,7 +15,7 @@
 	</tbody>
 </table>
 <!--<![endif]-->
-<table width="100%" cellspacing="0" cellpadding="0" border="0" style="font-family: Helvetica, Arial, sans-serif; background-color: #F0F1F3; Margin: 0;">
+<table width="100%" cellspacing="0" cellpadding="0" border="0" style="font-family: Helvetica, Arial, sans-serif; background-color: #EDECEC; Margin: 0;">
 	<tr>
 		<td align="center" style="padding-top: 40px; padding-bottom: 100px;">
 			
@@ -42,7 +42,7 @@
 										</a>
 									</center>
 									<p style="font-size: 16px; font-weight: bold; line-height: 19px; color: #2C2B2B; padding-left: 27px; Margin: 0;">Светильник KVADRO</p>
-									<p style="font-size: 15px; line-height: 18px; color: #8D8C8C; padding-left: 27px; padding-top: 10px; padding-bottom: 25px; Margin: 0;">от 8 370 р.</p>
+									<p style="font-size: 16px; line-height: 18px; color: #5B40A9; padding-left: 27px; padding-top: 10px; padding-bottom: 25px; Margin: 0;">от 8 370 р.</p>
 								</td>
 								<td width="30" style="width: 30px;"></td>
 								<td width="285" style="width: 285px; background-color: #FFFFFF; border-radius: 18px;">
@@ -52,7 +52,7 @@
 										</a>
 									</center>
 									<p style="font-size: 16px; font-weight: bold; line-height: 19px; color: #2C2B2B; padding-left: 27px; Margin: 0;">Светильник RING O</p>
-									<p style="font-size: 15px; line-height: 18px; color: #8D8C8C; padding-left: 27px; padding-top: 10px; padding-bottom: 25px; Margin: 0;">от 8 537 р.</p>									
+									<p style="font-size: 16px; line-height: 18px; color: #5B40A9; padding-left: 27px; padding-top: 10px; padding-bottom: 25px; Margin: 0;">от 8 537 р.</p>									
 								</td>								
 							</tr>
 						</table>
@@ -73,7 +73,7 @@
 										</a>
 									</center>
 									<p style="font-size: 16px; font-weight: bold; line-height: 19px; color: #2C2B2B; padding-left: 27px; Margin: 0;">Светильник Line 3535</p>
-									<p style="font-size: 15px; line-height: 18px; color: #8D8C8C; padding-left: 27px; padding-top: 10px; padding-bottom: 25px; Margin: 0;">от 3 307 р.</p>
+									<p style="font-size: 16px; line-height: 18px; color: #5B40A9; padding-left: 27px; padding-top: 10px; padding-bottom: 25px; Margin: 0;">от 3 307 р.</p>
 								</td>
 								<td width="30" style="width: 30px;"></td>
 								<td width="285" style="width: 285px; background-color: #FFFFFF; border-radius: 18px;">
@@ -83,7 +83,7 @@
 										</a>
 									</center>
 									<p style="font-size: 16px; font-weight: bold; line-height: 19px; color: #2C2B2B; padding-left: 27px; Margin: 0;">Светильник Stella</p>
-									<p style="font-size: 15px; line-height: 18px; color: #8D8C8C; padding-left: 27px; padding-top: 10px; padding-bottom: 25px; Margin: 0;">от 7 250 р.</p>									
+									<p style="font-size: 16px; line-height: 18px; color: #5B40A9; padding-left: 27px; padding-top: 10px; padding-bottom: 25px; Margin: 0;">от 7 250 р.</p>									
 								</td>								
 							</tr>
 						</table>
@@ -94,26 +94,29 @@
 					<td style="height: 30px;"></td>
 				</tr>
 				<tr>
-					<td style="background-color: #E8E8E3; padding-top: 40px; padding-bottom: 40px; border-radius: 18px;">
+					<td style="background-color: #E2E2DF; padding-top: 40px; padding-bottom: 40px; border-radius: 18px;">
 						<table align="center" cellspacing="0" cellpadding="0" border="0" style="width: 522px; max-width:522px;">
 							<tr>
 								<td>
 									<center>
 										<img src="https://onlyketch.github.io/pictures/linelight/1.png" alt="">
-										<p style="width: 121px; font-size: 12px; line-height: 14px; color: #2C2B2B;">Индвидуальные формы и размеры</p>
+										<p style="font-size: 12px; font-weight: bold; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 15px;">Неповторимость</p>
+										<p style="font-size: 12px; width: 121px; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 5px;">Индвидуальные формы и размеры</p>
 
 									</center>
 								</td>
 								<td>
 									<center>
 										<img src="https://onlyketch.github.io/pictures/linelight/2.png" alt="">
-										<p style="width: 168px; font-size: 12px; line-height: 14px; color: #2C2B2B;">Накладной и подвестной монтаж, регулировка высоты</p>
+										<p style="font-size: 12px; font-weight: bold; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 15px;">Индивидуальность</p>
+										<p style="font-size: 12px; width: 168px; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 5px;">Накладной и подвестной монтаж, регулировка высоты</p>
 									</center>
 								</td>
 								<td>
 									<center>
 										<img src="https://onlyketch.github.io/pictures/linelight/3.png" alt="">
-										<p style="width: 121px; font-size: 12px; line-height: 14px; color: #2C2B2B;">Окраска светльника в любой цвет по RAL</p>
+										<p style="font-size: 12px; font-weight: bold; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 15px;">Персонализация</p>
+										<p style="font-size: 12px; width: 121px; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 5px;">Окраска светльника в любой цвет по RAL</p>
 									</center>
 								</td>
 							</tr>
@@ -124,20 +127,23 @@
 								<td>
 									<center>
 										<img src="https://onlyketch.github.io/pictures/linelight/4.png" alt="">
-										<p style="width: 121px; font-size: 12px; line-height: 14px; color: #2C2B2B;">Возможность изготовления IP 54</p>
+										<p style="width: 121px; font-size: 12px; font-weight: bold; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 15px;">Стойкая защита</p>
+										<p style="font-size: 12px; width: 121px; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 5px;">Возможность изготовления IP 54</p>
 
 									</center>
 								</td>
 								<td>
 									<center>
 										<img src="https://onlyketch.github.io/pictures/linelight/5.png" alt="">
-										<p style="width: 168px; font-size: 12px; line-height: 14px; color: #2C2B2B;">Управление светильниками (Диммирование 0-10V, DALI)</p>
+										<p style="width: 168px; font-size: 12px; font-weight: bold; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 15px;">Регулировка яркости</p>
+										<p style="font-size: 12px; width: 168px; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 5px;">Управление светильниками (Диммирование 0-10V, DALI)</p>
 									</center>
 								</td>
 								<td>
 									<center>
 										<img src="https://onlyketch.github.io/pictures/linelight/6.png" alt="">
-										<p style="width: 121px; font-size: 12px; line-height: 14px; color: #2C2B2B;">Светильник с аварийными блоками питания</p>
+										<p style="font-size: 12px; font-weight: bold; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 15px;">Надежность</p>
+										<p style="font-size: 12px; width: 121px; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 5px;">Аварийный блок питания</p>
 									</center>
 								</td>
 							</tr>							
@@ -208,13 +214,13 @@
 					<td style="height: 30px;"></td>
 				</tr>
 				<tr>
-					<td style="background-color: #D9DC58; padding-top: 35px; padding-bottom: 46px; border-radius: 18px;">
+					<td style="background-color: #F2D42B; padding-top: 35px; padding-bottom: 46px; border-radius: 18px;">
 						<table align="center" cellspacing="0" cellpadding="0" border="0" style="width: 100%; max-width:600px;">
 							<tr>
 								<td valign="top" style="padding-left: 30px;">
 									<table width="240" cellspacing="0" cellpadding="0" border="0" style="width: 240px;">
 										<tr>
-											<td colspan="2" style="font-size: 20px; line-height: 24px; font-weight: bold; color: #2C2B2B; Margin: 0;">Заказчикам</td>
+											<td colspan="2" style="font-size: 20px; line-height: 24px; font-weight: bold; color: #2C2B2B; Margin: 0;">Дизайнерам</td>
 										</tr>
 										<tr>
 											<td colspan="2" style="height: 35px;"></td>
@@ -328,18 +334,18 @@
 					<td style="height: 30px;"></td>
 				</tr>
 				<tr>
-					<td style="background-color: #E8E8E3; padding-top: 16px; padding-bottom: 30px; padding-right: 30px; padding-left: 30px; border-radius: 18px;">
+					<td style="background-color: #F2D42B; padding-top: 16px; padding-bottom: 30px; padding-right: 30px; padding-left: 30px; border-radius: 18px;">
 						<table align="center" cellspacing="0" cellpadding="0" border="0" style="width: 100%;">
 							<tr>
-								<td align="left"><a href="tel:+78005004663" style="text-decoration: none; font-size: 16px; line-height: 19px; color: #2C2B2B;">8 (800) 500-46-63</a></td>
+								<td align="left"><a href="tel:+78005004663" style="text-decoration: none; font-size: 20px; line-height: 24px; font-weight: bold; color: #2C2B2B;">8 (800) 500-46-63</a></td>
 								<td align="right"><a href="https://aceled.ru" style="text-decoration: underline; font-size: 16px; line-height: 19px; color: #2C2B2B;" target="_blank">www.aceled.ru</a></td>
 							</tr>
 							<tr>
 								<td style="height: 62px;"></td>
 							</tr>
 							<tr>
-								<td align="left" style="font-weight: bold;">С уважением, команда «Линия Света»
-									<p style="font-size: 14px; line-height: 19px; color: #8D8C8C; font-weight: normal;">Российский производитель <br>светодиодного освещения</p></td>
+								<td align="left" style="color: #2C2B2B">С уважением, команда «Линия Света»
+									<p style="font-size: 14px; line-height: 19px; font-weight: normal;">Российский производитель <br>светодиодного освещения</p></td>
 								<td align="right">
 									<table align="right" width="70" cellspacing="0" cellpadding="0" border="0" style="width: 70px;">
 										<tr>
