--- a/china/china.html
+++ b/china/china.html
@@ -24,7 +24,7 @@
 				<tr>
 					<td style="text-align: center;">
 						<a href="http://allchinacargo.ru/" target="_blank">
-							<img src="https://onlyketch.github.io/pictures/china/banner.png" alt="Оплата в Китай" style="display: block;">
+							<img src="https://onlyketch.github.io/emails/china/banner.png" alt="Оплата в Китай" style="display: block;">
 						</a>
 					</td>
 				</tr>
@@ -52,7 +52,7 @@
 									</table>
 								</td>
 								<td style="padding-right: 38px; text-align: right;">
-									<img src="https://onlyketch.github.io/pictures/china/hours.png" alt="">
+									<img src="https://onlyketch.github.io/emails/china/hours.png" alt="">
 								</td>
 							</tr>
 						</table>
@@ -79,14 +79,14 @@
 										</tr>
 										<tr>
 											<td style="padding-top: 18px;">
-												<a href="https://wa.me/74953745187" target="_blank"><img src="https://onlyketch.github.io/pictures/china/btn1.png" alt="Узнать подробнее"></a>
+												<a href="https://wa.me/74953745187" target="_blank"><img src="https://onlyketch.github.io/emails/china/btn1.png" alt="Узнать подробнее"></a>
 											</td>
 										</tr>
 										
 									</table>
 								</td>
 								<td style="padding-right: 38px; text-align: right;">
-									<img src="https://onlyketch.github.io/pictures/china/card.png" alt="">
+									<img src="https://onlyketch.github.io/emails/china/card.png" alt="">
 								</td>
 							</tr>
 						</table>
@@ -100,7 +100,7 @@
 						<table align="center" cellspacing="0" cellpadding="0" border="0" style="width: 100%; max-width:600px;">
 							<tr>
 								<td valign="top" style="padding-left: 34px;">
-									<img src="https://onlyketch.github.io/pictures/china/work.png" alt="Работаем с Китаем более 11 лет">
+									<img src="https://onlyketch.github.io/emails/china/work.png" alt="Работаем с Китаем более 11 лет">
 								</td>
 							</tr>
 							<tr>
@@ -118,7 +118,7 @@
 								<td style="padding-top: 53px;">
 									<center>
 										<a href="https://wa.me/74953745187" target="_blank">
-											<img src="https://onlyketch.github.io/pictures/china/btn2.png" alt="Получить рассчет">
+											<img src="https://onlyketch.github.io/emails/china/btn2.png" alt="Получить рассчет">
 										</a>
 									</center>
 								</td>
@@ -134,7 +134,7 @@
 						<table align="center" cellspacing="0" cellpadding="0" border="0" style="width: 100%; max-width:600px;">
 							<tr>
 								<td align="center">
-									<a href="http://allchinacargo.ru/" target="_blank"><img src="https://onlyketch.github.io/pictures/china/logo.png" alt=""></a>
+									<a href="http://allchinacargo.ru/" target="_blank"><img src="https://onlyketch.github.io/emails/china/logo.png" alt=""></a>
 								</td>
 							</tr>
 							<tr>
@@ -151,10 +151,10 @@
 								<td align="center" style="padding-top: 20px;">
 									<table align="center" cellspacing="0" cellpadding="0" border="0" style="width:100%; max-width:150px;">
 										<tr>
-											<td style="text-align: center;"><a href="https://wa.me/74953745187" target="_blank"><img src="https://onlyketch.github.io/pictures/china/whats.png" alt="whatsup"></a></td>
-											<td style="text-align: center;"><a href="https://www.instagram.com/allchinacargo.ru" target="_blank"><img src="https://onlyketch.github.io/pictures/china/inst.png" alt="instgram"></a></td>
-											<td style="text-align: center;"><a href="https://t.me/Allchinacargo" target="_blank"><img src="https://onlyketch.github.io/pictures/china/tg.png" alt="telegram"></a></td>
-											<td style="text-align: center;"><a href="http://allchinacargo.ru/" target="_blank"><img src="https://onlyketch.github.io/pictures/china/link.png" alt="website"></a></td>
+											<td style="text-align: center;"><a href="https://wa.me/74953745187" target="_blank"><img src="https://onlyketch.github.io/emails/china/whats.png" alt="whatsup"></a></td>
+											<td style="text-align: center;"><a href="https://www.instagram.com/allchinacargo.ru" target="_blank"><img src="https://onlyketch.github.io/emails/china/inst.png" alt="instgram"></a></td>
+											<td style="text-align: center;"><a href="https://t.me/Allchinacargo" target="_blank"><img src="https://onlyketch.github.io/emails/china/tg.png" alt="telegram"></a></td>
+											<td style="text-align: center;"><a href="http://allchinacargo.ru/" target="_blank"><img src="https://onlyketch.github.io/emails/china/link.png" alt="website"></a></td>
 										</tr>
 									</table>
 								</td>
