--- a/linelight/line_mail.html
+++ b/linelight/line_mail.html
@@ -24,7 +24,7 @@
 				<tr>
 					<td style="text-align: center;">
 						<a href="https://aceled.ru/" target="_blank">
-							<img src="https://onlyketch.github.io/pictures/linelight/main.png" alt="Производство светильников по индивидуальным размерам" style="display: block;">
+							<img src="https://onlyketch.github.io/emails/linelight/main.png" alt="Производство светильников по индивидуальным размерам" style="display: block;">
 						</a>
 					</td>
 				</tr>
@@ -38,7 +38,7 @@
 								<td width="285" style="max-width: 285px; background-color: #FFFFFF; border-radius: 18px;">
 									<center>
 										<a href="https://aceled.ru/tproduct/463896866-530447173551-svetilnik-kvadro" target="_blank">
-											<img src="https://onlyketch.github.io/pictures/linelight/kvadro.png" alt="" style="display: block;">
+											<img src="https://onlyketch.github.io/emails/linelight/kvadro.png" alt="" style="display: block;">
 										</a>
 									</center>
 									<p style="font-size: 16px; font-weight: bold; line-height: 19px; color: #2C2B2B; padding-left: 27px; Margin: 0;">Светильник KVADRO</p>
@@ -48,7 +48,7 @@
 								<td width="285" style="width: 285px; background-color: #FFFFFF; border-radius: 18px;">
 									<center>
 										<a href="https://aceled.ru/tproduct/463896866-330114466021-svetilnik-ring-o" target="_blank">
-											<img src="https://onlyketch.github.io/pictures/linelight/ring.png" alt="" style="display: block;">
+											<img src="https://onlyketch.github.io/emails/linelight/ring.png" alt="" style="display: block;">
 										</a>
 									</center>
 									<p style="font-size: 16px; font-weight: bold; line-height: 19px; color: #2C2B2B; padding-left: 27px; Margin: 0;">Светильник RING O</p>
@@ -69,7 +69,7 @@
 								<td width="285" style="max-width: 285px; background-color: #FFFFFF; border-radius: 18px;">
 									<center>
 										<a href="https://aceled.ru/tproduct/463896866-183213412391-svetilnik-line-3535" target="_blank">
-											<img src="https://onlyketch.github.io/pictures/linelight/line.png" alt="" style="display: block;">
+											<img src="https://onlyketch.github.io/emails/linelight/line.png" alt="" style="display: block;">
 										</a>
 									</center>
 									<p style="font-size: 16px; font-weight: bold; line-height: 19px; color: #2C2B2B; padding-left: 27px; Margin: 0;">Светильник Line 3535</p>
@@ -79,7 +79,7 @@
 								<td width="285" style="width: 285px; background-color: #FFFFFF; border-radius: 18px;">
 									<center>
 										<a href="https://aceled.ru/tproduct/463896866-547149141441-svetilnik-stella" target="_blank">
-											<img src="https://onlyketch.github.io/pictures/linelight/stella.png" alt="" style="display: block;">
+											<img src="https://onlyketch.github.io/emails/linelight/stella.png" alt="" style="display: block;">
 										</a>
 									</center>
 									<p style="font-size: 16px; font-weight: bold; line-height: 19px; color: #2C2B2B; padding-left: 27px; Margin: 0;">Светильник Stella</p>
@@ -99,7 +99,7 @@
 							<tr>
 								<td>
 									<center>
-										<img src="https://onlyketch.github.io/pictures/linelight/1.png" alt="">
+										<img src="https://onlyketch.github.io/emails/linelight/1.png" alt="">
 										<p style="font-size: 12px; font-weight: bold; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 15px;">Неповторимость</p>
 										<p style="font-size: 12px; width: 121px; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 5px;">Индвидуальные формы и размеры</p>
 
@@ -107,14 +107,14 @@
 								</td>
 								<td>
 									<center>
-										<img src="https://onlyketch.github.io/pictures/linelight/2.png" alt="">
+										<img src="https://onlyketch.github.io/emails/linelight/2.png" alt="">
 										<p style="font-size: 12px; font-weight: bold; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 15px;">Индивидуальность</p>
 										<p style="font-size: 12px; width: 168px; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 5px;">Накладной и подвестной монтаж, регулировка высоты</p>
 									</center>
 								</td>
 								<td>
 									<center>
-										<img src="https://onlyketch.github.io/pictures/linelight/3.png" alt="">
+										<img src="https://onlyketch.github.io/emails/linelight/3.png" alt="">
 										<p style="font-size: 12px; font-weight: bold; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 15px;">Персонализация</p>
 										<p style="font-size: 12px; width: 121px; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 5px;">Окраска светльника в любой цвет по RAL</p>
 									</center>
@@ -126,7 +126,7 @@
 							<tr>
 								<td>
 									<center>
-										<img src="https://onlyketch.github.io/pictures/linelight/4.png" alt="">
+										<img src="https://onlyketch.github.io/emails/linelight/4.png" alt="">
 										<p style="width: 121px; font-size: 12px; font-weight: bold; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 15px;">Стойкая защита</p>
 										<p style="font-size: 12px; width: 121px; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 5px;">Возможность изготовления IP 54</p>
 
@@ -134,14 +134,14 @@
 								</td>
 								<td>
 									<center>
-										<img src="https://onlyketch.github.io/pictures/linelight/5.png" alt="">
+										<img src="https://onlyketch.github.io/emails/linelight/5.png" alt="">
 										<p style="width: 168px; font-size: 12px; font-weight: bold; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 15px;">Регулировка яркости</p>
 										<p style="font-size: 12px; width: 168px; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 5px;">Управление светильниками (Диммирование 0-10V, DALI)</p>
 									</center>
 								</td>
 								<td>
 									<center>
-										<img src="https://onlyketch.github.io/pictures/linelight/6.png" alt="">
+										<img src="https://onlyketch.github.io/emails/linelight/6.png" alt="">
 										<p style="font-size: 12px; font-weight: bold; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 15px;">Надежность</p>
 										<p style="font-size: 12px; width: 121px; line-height: 14px; color: #2C2B2B; Margin: 0; padding-top: 5px;">Аварийный блок питания</p>
 									</center>
@@ -167,7 +167,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
+												<img src="https://onlyketch.github.io/emails/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; font-weight: normal; color: #2C2B2B; Margin: 0;">
 											3D модели для проектов</p></td>
@@ -177,7 +177,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
+												<img src="https://onlyketch.github.io/emails/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Светотехнический расчет</p></td>
 										</tr>
@@ -186,7 +186,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
+												<img src="https://onlyketch.github.io/emails/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Индивидуальные условия</p></td>
 										</tr>
@@ -195,7 +195,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
+												<img src="https://onlyketch.github.io/emails/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Техническая поддержка</p></td>
 										</tr>
@@ -203,7 +203,7 @@
 								</td>
 								<td>
 									<center>
-										<img src="https://onlyketch.github.io/pictures/linelight/arch.png" alt="">
+										<img src="https://onlyketch.github.io/emails/linelight/arch.png" alt="">
 									</center>
 								</td>
 							</tr>
@@ -227,7 +227,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
+												<img src="https://onlyketch.github.io/emails/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; font-weight: normal; color: #2C2B2B; Margin: 0;">
 											Подбор оборудования</p></td>
@@ -237,7 +237,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
+												<img src="https://onlyketch.github.io/emails/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Бонусная программа</p></td>
 										</tr>
@@ -246,7 +246,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
+												<img src="https://onlyketch.github.io/emails/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Гарантийное обслуживание</p></td>
 										</tr>
@@ -255,7 +255,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
+												<img src="https://onlyketch.github.io/emails/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Персональные скидки</p></td>
 										</tr>
@@ -263,7 +263,7 @@
 								</td>
 								<td>
 									<center>
-										<img src="https://onlyketch.github.io/pictures/linelight/client.png" alt="">
+										<img src="https://onlyketch.github.io/emails/linelight/client.png" alt="">
 									</center>
 								</td>
 							</tr>
@@ -287,7 +287,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
+												<img src="https://onlyketch.github.io/emails/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; font-weight: normal; color: #2C2B2B; Margin: 0;">
 											Индивидуальный менеджер</p></td>
@@ -297,7 +297,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
+												<img src="https://onlyketch.github.io/emails/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Индивидуальные условия</p></td>
 										</tr>
@@ -306,7 +306,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
+												<img src="https://onlyketch.github.io/emails/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Помощь с проектом</p></td>
 										</tr>
@@ -315,7 +315,7 @@
 										</tr>
 										<tr>
 											<td>
-												<img src="https://onlyketch.github.io/pictures/linelight/check.png" alt="">
+												<img src="https://onlyketch.github.io/emails/linelight/check.png" alt="">
 											</td>
 											<td><p style="font-size: 16px; line-height: 19px; color: #2C2B2B; Margin: 0;">Защита проекта и не только</p></td>
 										</tr>
@@ -323,7 +323,7 @@
 								</td>
 								<td>
 									<center>
-										<img src="https://onlyketch.github.io/pictures/linelight/diler.png" alt="">
+										<img src="https://onlyketch.github.io/emails/linelight/diler.png" alt="">
 									</center>
 								</td>
 							</tr>
@@ -349,8 +349,8 @@
 								<td align="right">
 									<table align="right" width="70" cellspacing="0" cellpadding="0" border="0" style="width: 70px;">
 										<tr>
-											<td><a href="https://www.instagram.com/aceled.ru/" target="_blank"><img src="https://onlyketch.github.io/pictures/linelight/inst.png" alt=""></a></td>
-											<td style="padding-left: 3px;"><a href="https://wa.me/+79035056777" target="_blank"><img src="https://onlyketch.github.io/pictures/linelight/whats.png" alt=""></a></td>
+											<td><a href="https://www.instagram.com/aceled.ru/" target="_blank"><img src="https://onlyketch.github.io/emails/linelight/inst.png" alt=""></a></td>
+											<td style="padding-left: 3px;"><a href="https://wa.me/+79035056777" target="_blank"><img src="https://onlyketch.github.io/emails/linelight/whats.png" alt=""></a></td>
 										</tr>
 									</table>
 								</td>
