fix: оборочвание адресов яндексом

--- a/borishof/borishof.html
+++ b/borishof/borishof.html
@@ -411,7 +411,7 @@
 																	<img src="https://onlyketch.github.io/emails/borishof/geo.png" width="8" height="10" alt="geo icon" style="display: block; border: 0;">
 																</td>
 																<td style="padding-top: 4px; padding-left: 3px;">
-																	<span style="color: #262626; font-size: 12px; line-height: 16px;">Ленинский пр., д.146</span>
+																	<a style="color: #262626; font-size: 12px; line-height: 16px; text-decoration: none;">Ленинский пр., д.146</a>
 																</td>
 															</tr>
 														</table>
@@ -424,7 +424,7 @@
 																	<img src="https://onlyketch.github.io/emails/borishof/geo.png" width="8" height="10" alt="geo icon" style="display: block; border: 0;">
 																</td>
 																<td style="padding-top: 4px; padding-left: 3px;">
-																	<span style="color: #262626; font-size: 12px; line-height: 16px;">Пискаревский пр-кт 133, стр. 1</span>
+																	<a style="color: #262626; font-size: 12px; line-height: 16px; text-decoration: none;">Пискаревский пр-кт 133, стр. 1</a>
 																</td>
 															</tr>
 														</table>
@@ -442,7 +442,7 @@
 																				<img src="https://onlyketch.github.io/emails/borishof/geo.png" width="8" height="10" alt="geo icon" style="display: block; border: 0;">
 																			</td>
 																			<td style="padding-top: 4px; padding-left: 3px;">
-																				<span style="color: #262626; font-size: 12px; line-height: 16px;">Индустриальный проспект, 47</span>
+																				<a style="color: #262626; font-size: 12px; line-height: 16px; text-decoration: none;">Индустриальный проспект, 47</a>
 																			</td>
 																		</tr>
 																	</table>
@@ -489,7 +489,7 @@
 																	<img src="https://onlyketch.github.io/emails/borishof/geo.png" width="8" height="10" alt="geo icon" style="display: block; border: 0;">
 																</td>
 																<td style="padding-left: 3px; padding-top: 4px; vertical-align: top;">
-																	<span style="color: #262626; font-size: 12px; line-height: 16px;">ул. 2-я Магистральная ул.,<br>д. 18., стр. 1</span>
+																	<a style="color: #262626; font-size: 12px; line-height: 16px; text-decoration: none;">ул. 2-я Магистральная ул.,<br>д. 18., стр. 1</a>
 																</td>
 															</tr>
 														</table>
@@ -502,7 +502,7 @@
 																	<img src="https://onlyketch.github.io/emails/borishof/geo.png" width="8" height="10" alt="geo icon" style="display: block; border: 0;">
 																</td>
 																<td style="padding-left: 3px; padding-top: 4px; vertical-align: top;">
-																	<span style="color: #262626; font-size: 12px; line-height: 16px;">МКАД, 44 км (внешняя сторона)</span>
+																	<a style="color: #262626; font-size: 12px; line-height: 16px; text-decoration: none;">МКАД, 44 км (внешняя сторона)</a>
 																</td>
 															</tr>
 														</table>
@@ -523,7 +523,7 @@
 																	<img src="https://onlyketch.github.io/emails/borishof/geo.png" width="8" height="10" alt="geo icon" style="display: block; border: 0;">
 																</td>
 																<td style="padding-left: 3px; padding-top: 4px; vertical-align: top;">
-																	<span style="color: #262626; font-size: 12px; line-height: 16px;">Моск. обл., Ленинский р-н, с/п<br>Булатниковское, 29 км МКАД<br>(внешняя сторона)</span>
+																	<a style="color: #262626; font-size: 12px; line-height: 16px; text-decoration: none;">Моск. обл., Ленинский р-н, с/п<br>Булатниковское, 29 км МКАД<br>(внешняя сторона)</a>
 																</td>
 															</tr>
 														</table>
@@ -536,7 +536,7 @@
 																	<img src="https://onlyketch.github.io/emails/borishof/geo.png" width="8" height="10" alt="geo icon" style="display: block; border: 0;">
 																</td>
 																<td style="padding-left: 3px; padding-top: 4px; vertical-align: top;">
-																	<span style="color: #262626; font-size: 12px; line-height: 16px;">Ярославское ш., 36</span>
+																	<a style="color: #262626; font-size: 12px; line-height: 16px; text-decoration: none;">Ярославское ш., 36</a>
 																</td>
 															</tr>
 														</table>
@@ -557,7 +557,7 @@
 																	<img src="https://onlyketch.github.io/emails/borishof/geo.png" width="8" height="10" alt="geo icon" style="display: block; border: 0;">
 																</td>
 																<td style="padding-left: 3px; padding-top: 4px; vertical-align: top;">
-																	<span style="color: #262626; font-size: 12px; line-height: 16px;">Балашиха, ш. Энтузиастов,<br> мкрн ЦОВБ, 21</span>
+																	<a style="color: #262626; font-size: 12px; line-height: 16px; text-decoration: none;">Балашиха, ш. Энтузиастов,<br> мкрн ЦОВБ, 21</a>
 																</td>
 															</tr>
 														</table>
@@ -570,7 +570,7 @@
 																	<img src="https://onlyketch.github.io/emails/borishof/geo.png" width="8" height="10" alt="geo icon" style="display: block; border: 0;">
 																</td>
 																<td style="padding-left: 3px; padding-top: 4px; vertical-align: top;">
-																	<span style="color: #262626; font-size: 12px; line-height: 16px;">24км Киевского шоссе, строение 8<br>(4 км от МКАД)</span>
+																	<a style="color: #262626; font-size: 12px; line-height: 16px; text-decoration: none;">24км Киевского шоссе, строение 8<br>(4 км от МКАД)</a>
 																</td>
 															</tr>
 														</table>
@@ -591,7 +591,7 @@
 																	<img src="https://onlyketch.github.io/emails/borishof/geo.png" width="8" height="10" alt="geo icon" style="display: block; border: 0;">
 																</td>
 																<td style="padding-left: 3px; padding-top: 4px; vertical-align: top;">
-																	<span style="color: #262626; font-size: 12px; line-height: 16px;">Котельническая набережная, 31</span>
+																	<a style="color: #262626; font-size: 12px; line-height: 16px; text-decoration: none;">Котельническая набережная, 31</a>
 																</td>
 															</tr>
 														</table>
@@ -643,7 +643,7 @@
 																	<img src="https://onlyketch.github.io/emails/borishof/geo.png" width="8" height="10" alt="geo icon" style="display: block; border: 0;">
 																</td>
 																<td style="padding-top: 4px; padding-left: 3px;">
-																	<span style="color: #262626; font-size: 12px; line-height: 16px;">Большая Печерская 26</span>
+																	<a style="color: #262626; font-size: 12px; line-height: 16px; text-decoration: none;">Большая Печерская 26</a>
 																</td>
 															</tr>
 														</table>
