Корректировка верстки под аутлук 2007

--- a/egida/egida.html
+++ b/egida/egida.html
@@ -373,15 +373,12 @@
 										<table cellspacing="0" cellpadding="0" border="0" style="width: 100%;">
 											<tr>
 												<td>
-													<table cellspacing="0" cellpadding="0" border="0" width="243" style="border: 1px solid #CAE5F5; border-radius: 10px; padding-top: 15px; padding-left: 13px; padding-right: 13px; padding-bottom: 36px;">
+													<table cellspacing="0" cellpadding="0" border="0" width="243" height="179" style="border: 1px solid #CAE5F5; border-radius: 10px; padding-top: 15px; padding-left: 13px; padding-right: 13px;">
 														<tr>
-															<td><span style="color: #323232; font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-weight: 700; line-height: 20px;">Юридический адрес в купленом Готовом АО</span></td>
+															<td height="60" style="vertical-align: top;"><span style="color: #323232; font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-weight: 700; line-height: 20px;">Юридический адрес в купленом Готовом АО</span></td>
 														</tr>
 														<tr>
-															<td height="18"></td>
-														</tr>
-														<tr>
-															<td>
+															<td style="vertical-align: top;">
 																<table cellspacing="0" cellpadding="0" border="0" style="width: 100%;">
 																	<tr>
 																		<td style="vertical-align: top; padding-top: 4px;"><img src="https://onlyketch.github.io/emails/egida/bullet.png" width="9" height="9" alt="bullet" style="display: block; border: 0;"></td>
@@ -402,15 +399,12 @@
 												</td>
 												<td width="21"></td>
 												<td>
-													<table cellspacing="0" cellpadding="0" border="0" width="243" style="border: 1px solid #CAE5F5; border-radius: 10px; padding-top: 15px; padding-left: 13px; padding-right: 4px; padding-bottom: 71px;">
+													<table cellspacing="0" cellpadding="0" border="0" width="243" height="179" style="border: 1px solid #CAE5F5; border-radius: 10px; padding-top: 15px; padding-left: 13px; padding-right: 4px;">
 														<tr>
-															<td><span style="color: #323232; font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-weight: 700; line-height: 20px;">Регистрационные действия в купленном готовом АО</span></td>
+															<td height="60" style="vertical-align: top;"><span style="color: #323232; font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-weight: 700; line-height: 20px;">Регистрационные действия в купленном готовом АО</span></td>
 														</tr>
 														<tr>
-															<td height="18"></td>
-														</tr>
-														<tr>
-															<td>
+															<td style="vertical-align: top;">
 																<table cellspacing="0" cellpadding="0" border="0" style="width: 100%;">
 																	<tr>
 																		<td style="vertical-align: top; padding-top: 4px;"><img src="https://onlyketch.github.io/emails/egida/bullet.png" width="9" height="9" alt="bullet" style="display: block; border: 0;"></td>
